# tttc_practice

clang/tools/plugins/: CMakeLists.txt
clang/tools/plugins/AddPrefixes/: AddPrefixes.cpp  CMakeLists.txt
clang/tools/plugins/AddPrefixes/test-files/: main_test.cpp
